# lab11

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
include/: boostf.hpp  menu.hpp  struct.hpp
source.db/: 000016.sst  000017.sst  000018.sst  000022.sst  000023.sst  000024.sst  IDENTITY  LOG  LOG.old.1620664734844208  LOG.old.1620664782935260  LOG.old.1620664782965333  LOG.old.1620664826418910  LOG.old.1620664884514041  LOG.old.1620664923810053  LOG.old.1620665502310674  LOG.old.1620666616597801  LOG.old.1620666745892493  LOG.old.1620668626208252  LOG.old.1620669264318148  LOG.old.1620670309271920  LOG.old.1620670395652629  LOG.old.1620670426398060  LOG.old.1620670464432674  LOG.old.1620670496828096  LOG.old.1620670531480122  LOG.old.1620670646517079  LOG.old.1620670665613849  LOG.old.1620670809183964  LOG.old.1620670835880938  LOG.old.1620670864419389  LOG.old.1620671942296735  LOG.old.1620672008152210  LOG.old.1620672060389042  LOG.old.1620672100417521  LOG.old.1620672174016918  LOG.old.1620672210211103  LOG.old.1620672249259039  LOG.old.1620672301131385  LOG.old.1620672342967919  LOG.old.1620672357380594  (+38 more)
sources/: boostf.cpp  main.cpp  menu.cpp
tests/: test.cpp
